# aunties-cool-club

./: .editorconfig  .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  hello.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/ISSUE_TEMPLATE/: tasks-list.md
chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chatroom_admins_chatroom_video_link_and_more.py  0003_invitation.py
chat/templates/chat/: _footer.html  _history.html  _message.html  chat_room.html  chat_room_detail.html  chat_room_list.html  create_chat_room.html  invite_user.html  login.html  manage_invitations.html  request_invite.html
coolclub/: asgi.py  fastapi_app.py  manage.py  settings.py  urls.py  wsgi.py
coolclub/coolclub/: wsgi.py
coolclub/templates/: base.html  home.html
coolclub/templates/account/: login.html  logout.html  signup.html
static/css/: output.css
static/js/: flyonui.js  script.js
static/src/: output.css
staticfiles/css/: output.css
