[project]
name = "aunties-cool-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-allauth>=65.1.0",
    "channels-redis>=4.2.1",
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.3",
    "pillow>=11.0.0",
    "python-decouple>=3.8",
    "lock>=2018.3.25.2110",
]
[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.2",
]

[tool.uv.workspace]
members = ["tailwind"]
